# ZLeanStore

./: .gitignore  .intro.R.swp  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  intoleanstore.R  trx.csv
benchmark/: CMakeLists.txt  Filesystem_Gitclone  Filesystem_Wiki  Filesystem_YCSB  Makefile  MicroBitmap  MicroCompression  MicroFreePages  MicroQueue  MicroSearch  TestFreePagePrototype
benchmark/main/: leanstore_tpcc.cc  leanstore_webserver.cc
benchmark/main/email/: leanstore_email.cc
benchmark/main/flashbench/: leanstore_flashbench.cc
benchmark/main/gitclone/: filesystem_gitclone.cc  leanstore_gitclone.cc
benchmark/main/misc/: filesystem_aging.cc  leanstore_aging.cc  leanstore_wiki_index.cc
benchmark/main/url/: leanstore_url.cc
benchmark/main/wikipedia/: filesystem_wikipedia.cc  leanstore_wikipedia.cc
benchmark/main/wikititle/: leanstore_wikititle.cc
benchmark/main/ycsb/: filesystem_ycsb.cc  leanstore_ycsb.cc  mysql_ycsb.cc  postgres_ycsb.cc  sqlite3_ycsb.cc
benchmark/micro/: aio.cc  bitmap.cc  compress.cc  free_pages.cc  queue.cc  search.cc  sha2.cc
benchmark/micro/prototype/: git_sha256.h  random_sha256.h
benchmark/micro/prototype/free_page/: blob_alloc.h  impl.h  test.cc
benchmark/src/adapters/: config.cc  filesystem_adapter.cc  leanstore_adapter.cc  sql_databases.cc  wiredtiger_adapter.cc
benchmark/src/email/: config.cc
benchmark/src/filebench/webserver/: config.cc
benchmark/src/flashbench/: config.cc
benchmark/src/gitclone/: config.cc
benchmark/src/include/benchmark/adapters/: adapter.h  filesystem_adapter.h  leanstore_adapter.h  sql_databases.h  wiredtiger_adapter.h
benchmark/src/include/benchmark/email/: config.h  schema.h  workload.h
benchmark/src/include/benchmark/flashbench/: config.h  pattern_gen.h  riz.h  schema.h  workload.h
benchmark/src/include/benchmark/fuse/: schema.h
benchmark/src/tpcc/: workload.cc
benchmark/src/url/: config.cc  config.cc.in
benchmark/src/utils/: misc.cc  rand.cc
benchmark/src/wikipedia/: articles  config.cc
benchmark/src/wikititle/: config.cc
benchmark/src/ycsb/: config.cc
build_support/: run_clang_tidy_extra.py
share_libs/: Makefile  cmake_install.cmake
share_libs/croaring/: Makefile  cmake_install.cmake
share_libs/fsst/: Makefile  cmake_install.cmake
share_libs/include/share_headers/: config.h  db_types.h
share_libs/libpqxx/: cmake_install.cmake  libpqxx-config-version.cmake  libpqxx-targets.cmake
share_libs/libpqxx/include/: cmake_install.cmake
share_libs/libpqxx/src/: cmake_install.cmake
share_libs/lz4/: Makefile  cmake_install.cmake
share_libs/lz4/LibLz4-prefix/tmp/: LibLz4-gitclone.cmake  LibLz4-gitupdate.cmake  LibLz4-mkdirs.cmake
share_libs/sha256/: Makefile  cmake_install.cmake
share_libs/typefold/: Makefile  cmake_install.cmake
share_libs/yyjson/: Makefile  cmake_install.cmake
share_libs/yyjson/Libyyjson/tmp/: Libyyjson-gitclone.cmake  Libyyjson-gitupdate.cmake  Libyyjson-mkdirs.cmake
src/: config.cc  env.cc  leanstore.cc  statistics.cc
src/buffer/: buffer_manager.cc  resident_set.cc
src/common/: concurrent_queue.cc  utils.cc  worker_pool.cc
src/include/buffer/: buffer_frame.h  buffer_manager.h  resident_set.h
src/include/common/: concurrent_queue.h  constants.h  exceptions.h  format.h  typedefs.h  utils.h  worker_pool.h
src/include/leanstore/: config.h  env.h  external_schema.h  kv_interface.h  leanstore.h  statistics.h
src/include/recovery/: group_commit.h  log_entry.h  log_manager.h  log_worker.h
src/include/storage/: free_page_manager.h  page.h
src/include/storage/blob/: blob_handler.h  blob_manager.h  blob_state.h  compressor.h
src/include/storage/btree/: locking.h  node.h  tree.h  wal.h
src/include/storage/extent/: extent_list.h  large_page.h
src/include/storage/space/: device.h  doublewrite.h  garbage_collector.h  io_interface.h  space_manager.h
src/include/sync/: hybrid_guard.h  hybrid_latch.h  page_state.h
src/include/sync/page_guard/: exclusive_guard.h  optimistic_guard.h  page_guard.h  shared_guard.h
src/include/transaction/: transaction.h  transaction_manager.h
src/recovery/: group_commit.cc  log_manager.cc  log_worker.cc
src/storage/: free_page_manager.cc
src/storage/blob/: blob_manager.cc  compressor.cc
src/storage/btree/: locking.cc  node.cc  tree.cc
src/storage/extent/: extent_list.cc
src/storage/space/: device.cc  doublewrite.cc  garbage_collector.cc  io_interface.cc  space_manager.cc
src/storage/space/backend/: aio.cc  io_backend.cc  zns.cc
src/sync/: hybrid_guard.cc  hybrid_latch.cc  page_state.cc
src/sync/page_guard/: exclusive_guard.cc  optimistic_guard.cc  page_guard.cc  shared_guard.cc
src/transaction/: transaction.cc  transaction_manager.cc
test/: CTestTestfile.cmake  Makefile  TestAioInterface[1]_include.cmake  TestBTreeLocking[1]_include.cmake  TestBTreeNodeWithBlob[1]_include.cmake  TestBTreeNode[1]_include.cmake  TestBTree[1]_include.cmake  TestBlobManager[1]_include.cmake  TestBufferManager[1]_include.cmake  TestCompression[1]_include.cmake  TestExtentList[1]_include.cmake  TestFilesystemAdapter[1]_include.cmake  TestGroupCommit[1]_include.cmake  TestHybridGuard[1]_include.cmake  TestHybridLatch[1]_include.cmake  TestLeanStoreAdapter[1]_include.cmake  TestLogManager[1]_include.cmake  TestPageGuard[1]_include.cmake  TestTransaction[1]_include.cmake  TestWiredTigerAdapter[1]_include.cmake  cmake_install.cmake  main.cc
test/adapters/: test_filesystem_adapter.cc  test_leanstore_adapter.cc  test_wiredtiger_adapter.cc
test/buffer/: test_buffer_manager.cc
test/fuse/: fuse.cc
test/include/test/: base_test.h
test/recovery/: test_group_commit.cc  test_log_manager.cc
test/storage/: test_aio.cc
test/storage/blob/: test_blob_manager.cc  test_compression.cc
test/storage/btree/: test_locking.cc  test_node.cc  test_node_wblob.cc  test_tree.cc
test/storage/extent/: test_extent_list.cc
test/sync/: test_guard.cc  test_latch.cc  test_page_guard.cc
test/transaction/: test_transaction.cc
(+37 files in other folders)
